# python-project-lvl2

./: Makefile  README.md  after_nested.yml  before_nested.yml  pyproject.toml
gendiff/: constants.py  functions.py  functionscopy.py  generate_diff.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py  text.py  textcopy.py
gendiff/scripts/: gendiff.py
tests/: plain_json_test.py  pytest_test.py  test_data.py
tests/fixtures/: after_nested.yml  before_nested.yml  test_result_json.txt  test_result_nested.txt
