[tool.poetry]
name = "PavelGoshurenko_getdiff"
version = "0.5.0"
description = ""
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.1"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
