[tool.poetry]
name = "PavelGoshurenko_getdiff"
version = "0.8.0"
description = "Find differences between JSON or YAML files"
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]
repository = "https://github.com/PavelGoshurenko/python-project-lvl2"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
